--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 services:
   appweb:
     container_name: appweb
@@ -20,7 +20,7 @@ services:
     container_name: reverseproxy
     build: .
     ports:
-      - '80:80'
+      - "80:80"
     networks:
       - mynet
     depends_on:
