--- a/app-backend/.env
+++ b/app-backend/.env
@@ -1,10 +1,10 @@
 PORT=3333
-HOST=backend
+HOST=app-backend
 NODE_ENV=production
 APP_KEY=C1DGvT8xuyiCVDBWBJkvstYeblA9ZDgF
 DRIVE_DISK=local
 DB_CONNECTION=pg
-PG_HOST=db
+PG_HOST=app-database
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
