--- a/app-reverse-proxy/default.conf
+++ b/app-reverse-proxy/default.conf
@@ -1,10 +1,10 @@
 server {
   listen       80;
   listen  [::]:80;
-  server_name  reverseproxy;
+  server_name  "app-reverse-proxy";
 
   location / {
-    proxy_pass http://backend:3333/;
+    proxy_pass http://app-backend:3333/;
 
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
