--- a/app-reverse-proxy/default.conf
+++ b/app-reverse-proxy/default.conf
@@ -4,6 +4,12 @@ server {
   server_name  "app-reverse-proxy";
 
   location / {
+    root /usr/share/nginx/app-frontend;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+
+  location /backend/ {
     proxy_pass http://app-backend:3333/;
 
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -16,9 +22,5 @@ server {
     proxy_set_header Connection "upgrade";
   }
 
-  error_page   500 502 503 504  /50x.html;
-
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+  error_page   404 500 502 503 504  /error;
 }
