--- a/app-backend/Dockerfile
+++ b/app-backend/Dockerfile
@@ -6,7 +6,7 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
   && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz\
   && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-COPY ./api /app-backend
+COPY . /app-backend
 
 WORKDIR /app-backend
 
