--- a/app-reverse-proxy/Dockerfile
+++ b/app-reverse-proxy/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:latest
 
-COPY ./frontend /usr/share/nginx/app-frontend
+COPY . /usr/share/nginx/app-frontend
 
 COPY default.conf /etc/nginx/conf.d/
 
